My first website

--- a/research.html
+++ b/research.html
@@ -188,7 +188,7 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
-  <a href="rnote.html">Random Note</a>
+  <a href="rnote.html">Random Notes</a>
 </li>
 <li>
   <a href="https://polinwang.shinyapps.io/test/">French data test</a>
@@ -211,6 +211,22 @@ $(document).ready(function () {
 
 
 <hr />
+<div id="publications" class="section level3">
+<h3>Publications</h3>
+<ul>
+<li>McCarthy, David and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>forthcoming in North American Actuarial Journal</em></li>
+</ul>
+</div>
+<div id="working-papers" class="section level3">
+<h3>Working Papers</h3>
+<ul>
+<li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
+<li><p>McCarthy, David and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
+<li><p>McCarthy, David and Polin Wang, “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia”</p></li>
+<li><p>Carson, James, David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”, <em>To be under review in January 2019</em></p></li>
+<li><p>McCarthy, David and Polin Wang, “Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality”</p></li>
+</ul>
+</div>
 <div id="presentations" class="section level3">
 <h3>Presentations</h3>
 <ul>
@@ -224,16 +240,6 @@ $(document).ready(function () {
 <li><p>13 International Longevity Risk and Capital Markets Solutions Conference, Taipei, Taiwan, Sep 2017 “An investigation of period and cohort effects in adult mortality across 38 countries” With David McCarthy</p></li>
 <li><p>Southern Risk and Insurance Annual Meeting 2016, Savannah, GA, Nov 2016 “Pricing power in life insurance industry” With James Carson and David Eckles</p></li>
 <li><p>UGA/FSU Symposium, Tallahassee, FL, May 2016 “A comparison between Lee-Carter model and a distribution-base cohort model” With David McCarthy</p></li>
-</ul>
-</div>
-<div id="working-paper" class="section level3">
-<h3>Working Paper</h3>
-<ul>
-<li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
-<li><p>McCarthy, David and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
-<li><p>McCarthy, David and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>Revise and resubmit at North American Actuarial Journal</em></p></li>
-<li><p>Carson, James, David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”, <em>To be under review in January 2019</em></p></li>
-<li><p>McCarthy, David and Polin Wang, “Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality”</p></li>
 </ul>
 </div>
 
