My first website

--- a/research.html
+++ b/research.html
@@ -214,7 +214,7 @@ $(document).ready(function () {
 <div id="publications" class="section level3">
 <h3>Publications</h3>
 <ul>
-<li>McCarthy, David and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>forthcoming in North American Actuarial Journal</em></li>
+<li>McCarthy, David and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>forthcoming in North American Actuarial Journal</em>. Accepted January 2019</li>
 </ul>
 </div>
 <div id="working-papers" class="section level3">
