My first website

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <div id="awards-and-honors" class="section level4">
 <h4>Awards and Honors</h4>
 <ul>
-<li>2018 Harris Schlesinger Doctoral Student Paper Award</li>
+<li>2018 Harris Schlesinger Memorial Doctoral Research Award</li>
 <li>2018 University of Georgia RMIN Summer Research Scholarship</li>
 <li>2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)</li>
 </ul>
