--- a/rnote.html
+++ b/rnote.html
@@ -308,7 +308,23 @@ div.tocify {
 </div>
 
 
+<div id="lln-and-clt" class="section level3">
+<h3>LLN and CLT</h3>
+<ul>
+<li><strong>Law of Large Number</strong>: <span class="math display">\[ \text{For any small }\epsilon&gt;0, Pr(|\frac{L_1+L_2+...+L_N}{N}-\mu&lt;\epsilon|)\rightarrow1 \text{ as } N\rightarrow \infty \]</span>
+<ul>
+<li>where <span class="math inline">\(L_i\)</span> can be loss of person <span class="math inline">\(i\)</span> and all <span class="math inline">\(L_i\)</span> has mean <span class="math inline">\(\mu\)</span>.</li>
+<li>This means when sample size is big enough, sample mean will approach the true mean.</li>
+<li>LLN is useful when thinking about the more people are insured, the actual average loss is close to the true loss.</li>
+</ul></li>
+<li><strong>Central Limit Theorm</strong>: <span class="math display">\[ \text{Regardless of how } L_i \text{ distributes, } \frac{L_1+L_2+...+L_N}{N}\rightarrow Normal (\mu,\sigma/\sqrt{N}) \text{ as } N\rightarrow \infty.\]</span>
+<ul>
+<li>This means the random variable, sample mean, will become very close to normal and get narrower if sample size is big enough.</li>
+<li>CLT is useful when thinking about calculating incident (mortality) rate. e.g. The more people are observed for survival(0) or death(1) in 70 years old, (<span class="math inline">\(L_i\in\{0,1\}\)</span>), then <span class="math inline">\(\frac{L_1+L_2+...+L_N}{N}=D/N\)</span> if <span class="math inline">\(D\)</span> is the number of deaths. If <span class="math inline">\(N\)</span> is big enought, then this probability estimation will be close to normally distributed, with a mean close to the true <span class="math inline">\(p\)</span> and a standard deviation <span class="math inline">\(\sigma/\sqrt{N}\)</span>.</li>
+</ul></li>
+</ul>
 <hr />
+</div>
 <div id="blue" class="section level3">
 <h3>BLUE</h3>
 <div id="small-finite-sample-property-apply-to-all-sample-sizes-small-and-large" class="section level4">
@@ -321,7 +337,7 @@ div.tocify {
 </div>
 <div id="efficiency" class="section level5">
 <h5>Efficiency</h5>
-<p>Given two unbiased estimators of <span class="math inline">\(\theta\)</span>, an estimator <span class="math inline">\(W_1\)</span> is efficient relative to <span class="math inline">\(W_2\)</span> if <span class="math inline">\(Var(W1)\leq Var(W2) \forall \theta\)</span></p>
+<p>Given two unbiased estimators of <span class="math inline">\(\theta\)</span>, an estimator <span class="math inline">\(W_1\)</span> is efficient relative to <span class="math inline">\(W_2\)</span> if <span class="math inline">\(Var(W1)\leq Var(W2) \quad \forall \theta\)</span></p>
 </div>
 </div>
 <div id="large-sample-asymptotic-property" class="section level4">
@@ -329,7 +345,7 @@ div.tocify {
 <div id="consistency" class="section level5">
 <h5>Consistency</h5>
 <p>An estimator is consistent if, as the sample size increases, the estimates (produced by the estimator) “converge” to the true value of the parameter being estimated. To be slightly more precise - consistency means that, as the sample size increases, the sampling distribution of the estimator becomes increasingly concentrated at the true parameter value.</p>
-<p>As sample size <span class="math inline">\(n\rightarrow \inf\)</span>, <span class="math inline">\(P(\mid W_n-\theta\mid&gt;\epsilon)\rightarrow 0\)</span></p>
+<p>As sample size <span class="math inline">\(n\rightarrow \infty\)</span>, <span class="math inline">\(P(\mid W_n-\theta\mid&gt;\epsilon)\rightarrow 0\)</span></p>
 </div>
 <div id="unbiasedness-and-consistency-are-not-equivalent-unbiasedness-is-a-statement-about-the-expected-value-of-the-sampling-distribution-of-the-estimator.-consistency-is-a-statement-about-where-the-sampling-distribution-of-the-estimator-is-going-as-the-sample-size-increases." class="section level5">
 <h5>Unbiasedness and consistency are not equivalent: Unbiasedness is a statement about the expected value of the sampling distribution of the estimator. Consistency is a statement about “where the sampling distribution of the estimator is going” as the sample size increases.</h5>
@@ -3882,22 +3898,6 @@ jpn &lt;- readHMDweb(&#39;JPN&#39;, &quot;mltper_1x1&quot;, user_hmd, pass_hmd)
 plot(usa[usa$Year==1933,]$Lx~usa[usa$Year==1933,]$Age,type=&#39;l&#39;)</code></pre>
 <p><img src="rnote_files/figure-html/unnamed-chunk-8-1.png" width="672" /></p>
 <hr />
-</div>
-<div id="law-of-large-number-and-central-limit-theorem" class="section level3">
-<h3>Law of Large Number and Central Limit Theorem</h3>
-<ul>
-<li><strong>Law of Large Number</strong>: <span class="math display">\[ \text{For any small }\epsilon&gt;0, Pr(|\frac{L_1+L_2+...+L_N}{N}-\mu&lt;\epsilon|)\rightarrow1 \text{ as } N\rightarrow \infty \]</span>
-<ul>
-<li>where <span class="math inline">\(L_i\)</span> can be loss of person <span class="math inline">\(i\)</span> and all <span class="math inline">\(L_i\)</span> has mean <span class="math inline">\(\mu\)</span>.</li>
-<li>This means when sample size is big enough, sample mean will approach the true mean.</li>
-<li>LLN is useful when thinking about the more people are insured, the actual average loss is close to the true loss.</li>
-</ul></li>
-<li><strong>Central Limit Theorm</strong>: <span class="math display">\[ \text{Regardless of how } L_i \text{ distributes, } \frac{L_1+L_2+...+L_N}{N}\rightarrow Normal (\mu,\sigma/\sqrt{N}) \text{ as } N\rightarrow \infty.\]</span>
-<ul>
-<li>This means the random variable, sample mean, will become very close to normal and get narrower if sample size is big enough.</li>
-<li>CLT is useful when thinking about calculating incident (mortality) rate. e.g. The more people are observed for survival(0) or death(1) in 70 years old, (<span class="math inline">\(L_i\in\{0,1\}\)</span>), then <span class="math inline">\(\frac{L_1+L_2+...+L_N}{N}=D/N\)</span> if <span class="math inline">\(D\)</span> is the number of deaths. If <span class="math inline">\(N\)</span> is big enought, then this probability estimation will be close to normally distributed, with a mean close to the true <span class="math inline">\(p\)</span> and a standard deviation <span class="math inline">\(\sigma/\sqrt{N}\)</span>.</li>
-</ul></li>
-</ul>
 </div>
 
 
