My first website

--- a/research.html
+++ b/research.html
@@ -220,11 +220,12 @@ $(document).ready(function () {
 <div id="working-papers" class="section level3">
 <h3>Working Papers</h3>
 <ul>
+<li><p>McCarthy, David and Polin Wang, “How diversifiable are Eurozone state pension liabilities? An application of a multi-country Bayesian cohort-based approach with a Vector Error-Correction Model prior.”</p></li>
+<li><p>Carson, James, David Eckles, Joshua Frederick, and Polin Wang, “Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?”</p></li>
 <li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
 <li><p>McCarthy, David and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
 <li><p>McCarthy, David and Polin Wang, “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia”</p></li>
-<li><p>Carson, James, David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”, <em>To be under review in January 2019</em></p></li>
-<li><p>McCarthy, David and Polin Wang, “Using Hierarchical Likelihood to Estimate a Distribution-Based Survival Model for US Mortality”</p></li>
+<li><p>Carson, James, David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”,</p></li>
 </ul>
 </div>
 <div id="presentations" class="section level3">
