My first website

--- a/rnote.html
+++ b/rnote.html
@@ -470,7 +470,7 @@ div.tocify {
 0 &amp; 0 &amp; 0 &amp; \ldots &amp; 0\\
 \vdots &amp; \vdots &amp; \vdots &amp; \ddots &amp; \vdots\\
 0 &amp; 0 &amp; 0 &amp; \ldots &amp; 1/\sigma^2_n 
-\end{bmatrix}\\ \boxed{\text{Weighted by } \frac{1}{\sigma^2_i}}
+\end{bmatrix}\rightarrow \boxed{\text{Weighted by } \frac{1}{\sigma^2_i}}
 \]</span></p>
 <hr />
 </div>
