--- a/rnote.html
+++ b/rnote.html
@@ -474,6 +474,17 @@ div.tocify {
 \]</span></p>
 <hr />
 </div>
+<div id="generalized-method-of-moments" class="section level3">
+<h3>Generalized method of moments</h3>
+<ul>
+<li>It is used to estimate IV</li>
+<li># of parameters &lt; # of moment conditions <span class="math inline">\(\Rightarrow\)</span></li>
+</ul>
+<p><span class="math display">\[
+\frac{1}{N}\sum x_i=\hat{\mu} \quad \boxed{equality} \\ \Rightarrow g_1 = \frac{1}{N}\sum x_i -\hat{\mu} \quad\boxed{\text{miniize difference}}
+\]</span></p>
+<hr />
+</div>
 <div id="fixed-effect-clustering" class="section level3">
 <h3>Fixed Effect &amp; Clustering</h3>
 <p>Two ways of getting fixed effect estimation and clustering standard errors: <code>plm</code> and <code>felm</code>. They are consistent without fixed effect, and are slightly different in degree of freedom adjustment when running with either one or both dimensions of fixed effect.</p>
