My first website

--- a/rnote.html
+++ b/rnote.html
@@ -478,10 +478,13 @@ div.tocify {
 <h3>Generalized method of moments</h3>
 <ul>
 <li>It is used to estimate IV</li>
-<li># of parameters &lt; # of moment conditions <span class="math inline">\(\Rightarrow\)</span></li>
+<li># of parameters &lt; # of moment conditions e.g.</li>
 </ul>
 <p><span class="math display">\[
-\frac{1}{N}\sum x_i=\hat{\mu} \quad \boxed{equality} \\ \Rightarrow g_1 = \frac{1}{N}\sum x_i -\hat{\mu} \quad\boxed{\text{miniize difference}}
+\begin{split}
+&amp;\Rightarrow\frac{1}{N}\sum x_i=\hat{\mu} \quad &amp;\boxed{\text{Equality}} \\
+&amp;\Rightarrow g_1 = \frac{1}{N}\sum x_i -\hat{\mu} \quad&amp;\boxed{\text{Miniize difference}}
+\end{split}
 \]</span></p>
 <hr />
 </div>
