My first website

--- a/index.html
+++ b/index.html
@@ -336,6 +336,25 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <h4>Research Interests</h4>
 <p>Mortality modeling, asset liability management, generational wealth accounts, and market discipine</p>
 </div>
+<div id="society-of-actuary-soa-exams-completed" class="section level4">
+<h4>Society of Actuary (SOA) Exams Completed:</h4>
+<ul>
+<li>P (Probability)</li>
+<li>FM (Financial Mathematics)</li>
+<li>MFE (Models for Financial Economics)</li>
+<li>MLC (Models for Life Contingencies)</li>
+<li>C (Construction and Evaluation of Actuarial Models)</li>
+</ul>
+</div>
+<div id="awards-and-honors" class="section level4">
+<h4>Awards and Honors</h4>
+<ul>
+<li>2019 S.S. Huebner Doctoral Colloquium</li>
+<li>2018 Harris Schlesinger Memorial Doctoral Research Award</li>
+<li>2018 University of Georgia RMIN Summer Research Scholarship</li>
+<li>2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)</li>
+</ul>
+</div>
 <div id="programming-languages" class="section level4">
 <h4>Programming Languages</h4>
 <ul>
@@ -343,18 +362,6 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <li>Prophet (professional with insurance pricing and reserving experience)</li>
 <li>Matlab (asset liability optimization projects)</li>
 <li>R (recently developed interests in)</li>
-</ul>
-</div>
-<div id="society-of-actuary-soa-exams-completed" class="section level4">
-<h4>Society of Actuary (SOA) Exams Completed:</h4>
-<p>P, FM, MFE, MLC, and C</p>
-</div>
-<div id="awards-and-honors" class="section level4">
-<h4>Awards and Honors</h4>
-<ul>
-<li>2018 Harris Schlesinger Memorial Doctoral Research Award</li>
-<li>2018 University of Georgia RMIN Summer Research Scholarship</li>
-<li>2012 Taiwan Insurance Best Performance Award - Best Innovation Product (Co-designer)</li>
 </ul>
 <hr />
 <p>Last updated : May, 2019</p>
