--- a/research.html
+++ b/research.html
@@ -317,23 +317,26 @@ $(document).ready(function () {
 <div id="publications" class="section level3">
 <h3>Publications</h3>
 <ul>
-<li>McCarthy, David and Polin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>forthcoming in North American Actuarial Journal</em>. Accepted January 2019</li>
+<li>McCarthy, David and Po-Lin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>forthcoming in North American Actuarial Journal</em>. Accepted January 2019</li>
 </ul>
 </div>
 <div id="working-papers" class="section level3">
 <h3>Working Papers</h3>
 <ul>
-<li><p>McCarthy, David and Polin Wang, “How diversifiable are Eurozone state pension liabilities? An application of a multi-country Bayesian cohort-based approach with a Vector Error-Correction Model prior.”</p></li>
-<li><p>Carson, James, David Eckles, Joshua Frederick, and Polin Wang, “Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?”</p></li>
-<li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
-<li><p>McCarthy, David and Polin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
-<li><p>McCarthy, David and Polin Wang, “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia”</p></li>
-<li><p>Carson, James, David Eckles, and Polin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”,</p></li>
+<li><p>McCarthy, David and Po-Lin Wang, “How diversifiable are Eurozone state pension liabilities? An application of a multi-country Bayesian cohort-based approach with a Vector Error-Correction Model prior.”</p></li>
+<li><p>Carson, James, David Eckles, Joshua Frederick, and Po-Lin Wang, “Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?”</p></li>
+<li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Po-Lin Wang, “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014”</p></li>
+<li><p>McCarthy, David and Po-Lin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
+<li><p>McCarthy, David and Po-Lin Wang, “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia”</p></li>
+<li><p>Carson, James, David Eckles, and Po-Lin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”,</p></li>
 </ul>
 </div>
 <div id="presentations" class="section level3">
 <h3>Presentations</h3>
 <ul>
+<li><p>2019 S.S. Huebner Doctoral Colloquium, San Francisco, CA, scheduled in Aug 2019 “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia” With David McCarthy</p></li>
+<li><p>American Risk and Insurance Annual Meeting 2019, San Francisco, CA, scheduled in Aug 2019 “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia” With David McCarthy</p></li>
+<li><p>American Risk and Insurance Annual Meeting 2019, San Francisco, CA, scheduled in Aug 2019 “Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?” With James Carson, David Eckles, and Joshua Frederick</p></li>
 <li><p>Southern Risk and Insurance Annual Meeting 2018, Orlando, FL, Nov 2018 “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014” With David McCarthy, Florian Bonnet, and Hippolyte d’Albis</p></li>
 <li><p>Southern Risk and Insurance Annual Meeting 2018, Orlando, FL, Nov 2018 “An analysis of period and cohort mortality shocks in international data” with David McCarthy</p></li>
 <li><p>14 International Longevity Risk and Capital Markets Solutions Conference, Amsterdam, Netherlands, Sep 2018 “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems” With David McCarthy, presented by David McCarthy</p></li>
