My first website

--- a/research.html
+++ b/research.html
@@ -328,7 +328,7 @@ $(document).ready(function () {
 <li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Po-Lin Wang, “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014”</p></li>
 <li><p>McCarthy, David and Po-Lin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
 <li><p>McCarthy, David and Po-Lin Wang, “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia”</p></li>
-<li><p>Carson, James, David Eckles, and Po-Lin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”,</p></li>
+<li><p>Carson, James, David Eckles, and Po-Lin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”</p></li>
 </ul>
 </div>
 <div id="presentations" class="section level3">
