My first website

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 </p>
 <div id="curriculum-vitae" class="section level4">
 <h4>Curriculum vitae</h4>
-<p>Download my <a href="https://drive.google.com/file/d/1UEHBgPeGOMO2MT3hlF-U8TjOobwGsdYn/view?usp=sharing">CV</a></p>
+<p>Download my <a href="https://drive.google.com/open?id=1LQuxxk-6ayb-D3PxP-OuvYA8V4uv42Ld">CV</a></p>
 </div>
 <div id="research-interests" class="section level4">
 <h4>Research Interests</h4>
