My first website

--- a/teaching.html
+++ b/teaching.html
@@ -316,7 +316,7 @@ $(document).ready(function () {
 <li><p>Statistical Analysis for Business MSIT 3000 Teaching Assistant</p>
 <p>(Fall 2015, Spring 2016, Fall 2016, Spring 2017)</p></li>
 <li><p>Risk Management and Insurance RMIN 4000 Instructor of Record</p>
-<p>(Spring 2019 – <a href="https://drive.google.com/file/d/1J2mYaTuITbFIBi3Zjeq5KfuJ5GHRBVCp/view?usp=sharing">Syllabus</a>)</p></li>
+<p>(Spring 2019 – <a href="https://drive.google.com/file/d/1J2mYaTuITbFIBi3Zjeq5KfuJ5GHRBVCp/view?usp=sharing">Syllabus</a>, scheduled: Spring 2020)</p></li>
 </ul>
 </div>
 
