My first website

--- a/research.html
+++ b/research.html
@@ -328,6 +328,10 @@ $(document).ready(function () {
 <div id="presentations" class="section level3">
 <h3>Presentations</h3>
 <ul>
+<li><p>Southern Risk and Insurance Annual Meeting 2019, Charleston, SC, scheduled in Nov 2019<br />
+“Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia” With David McCarthy</p></li>
+<li><p>Southern Risk and Insurance Annual Meeting 2019, Charleston, SC, scheduled in Nov 2019<br />
+“Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?” With James Carson, David Eckles, and Joshua Frederick</p></li>
 <li><p>15 International Longevity Risk and Capital Markets Solutions Conference, Washington D.C., Sep 2018<br />
 “How diversifiable is the mortality risk in Eurozone state pension liabilities?” With David McCarthy</p></li>
 <li><p>2019 S.S. Huebner Doctoral Colloquium, San Francisco, CA, Aug 2019<br />
