My first website

--- a/rnote.html
+++ b/rnote.html
@@ -1483,7 +1483,7 @@ Residual Std. Error
 <li>Command in shell
 <ul>
 <li><code>git add -A</code></li>
-<li><code>git commit -m &quot;My first website&quot;</code></li>
+<li><code>git commit -m "My first website"</code></li>
 <li><code>git push origin master</code></li>
 </ul></li>
 </ol></li>
