--- a/research.html
+++ b/research.html
@@ -321,13 +321,15 @@ $(document).ready(function () {
 <li><p>Carson, James, David Eckles, Joshua Frederick, and Po-Lin Wang, “Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?”</p></li>
 <li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Po-Lin Wang, “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014”</p></li>
 <li><p>McCarthy, David and Po-Lin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
-<li><p>McCarthy, David and Po-Lin Wang, “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia”</p></li>
+<li><p>McCarthy, David and Po-Lin Wang, “Pension deficits &amp; strategic labor supply within worker groups: evidence from employees of the City of Philadelphia”</p></li>
 <li><p>Carson, James, David Eckles, and Po-Lin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”</p></li>
 </ul>
 </div>
 <div id="presentations" class="section level3">
 <h3>Presentations</h3>
 <ul>
+<li><p>2020 Population Association of America (PAA) Annual Meeting, Washington, DC, scheduled in Apr 2020<br />
+“An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1850-2014”. With David McCarthy, Florian Bonnet, and Hippolyte d’Albis</p></li>
 <li><p>Southern Risk and Insurance Annual Meeting 2019, Charleston, SC, scheduled in Nov 2019<br />
 “Choose your pension: an analysis of how pension rules influence overtime work by employees of the City of Philadelphia” With David McCarthy</p></li>
 <li><p>Southern Risk and Insurance Annual Meeting 2019, Charleston, SC, scheduled in Nov 2019<br />
