My first website

--- a/research.html
+++ b/research.html
@@ -268,7 +268,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Polin Wang</a>
+      <a class="navbar-brand" href="index.html">Po-Lin Wang</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -311,17 +311,17 @@ $(document).ready(function () {
 <div id="publications" class="section level3">
 <h3>Publications</h3>
 <ul>
-<li>McCarthy, David and Po-Lin Wang, “An analysis of period and cohort mortality shocks in international data”, <em>forthcoming in North American Actuarial Journal</em>. Accepted January 2019</li>
+<li>McCarthy, David, and Po-Lin Wang. (2019). “An Analysis of Period and Cohort Mortality Shocks in International Data.” <em>North American Actuarial Journal</em>, 1-25.</li>
 </ul>
 </div>
 <div id="working-papers" class="section level3">
 <h3>Working Papers</h3>
 <ul>
-<li><p>McCarthy, David and Po-Lin Wang, “How diversifiable is the mortality risk in Eurozone state pension liabilities?”</p></li>
+<li><p>McCarthy, David and Po-Lin Wang, “How diversifiable is the mortality risk in Eurozone state pension liabilities?” Under review</p></li>
+<li><p>McCarthy, David and Po-Lin Wang, “Pension deficits &amp; strategic labor supply within worker groups: evidence from employees of the City of Philadelphia” Under review</p></li>
 <li><p>Carson, James, David Eckles, Joshua Frederick, and Po-Lin Wang, “Did the ACA Inject a Healthy Dose of Discipline in the U.S. Health Insurance Market?”</p></li>
 <li><p>McCarthy, David, Florian Bonnet, Hippolyte d’Albis, and Po-Lin Wang, “An investigation of period and cohort effects in multi-population data, with an application to French regional mortality data from 1901-2014”</p></li>
 <li><p>McCarthy, David and Po-Lin Wang, “The effect of longevity risk on the sustainability &amp; inter-generational equity of public and private transfer systems”</p></li>
-<li><p>McCarthy, David and Po-Lin Wang, “Pension deficits &amp; strategic labor supply within worker groups: evidence from employees of the City of Philadelphia”</p></li>
 <li><p>Carson, James, David Eckles, and Po-Lin Wang, “On the Existence of Market Discipline In the Face of Product Complexity and Firm Opacity”</p></li>
 </ul>
 </div>
