--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Polin Wang</a>
+      <a class="navbar-brand" href="index.html">Po-Lin Wang</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -358,7 +358,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <li>R (recently developed interests in)</li>
 </ul>
 <hr />
-<p>Last updated : November, 2019</p>
+<p>Last updated : February, 2020</p>
 </div>
 
 
