My first website

--- a/rnote.html
+++ b/rnote.html
@@ -1098,7 +1098,7 @@ x
 (0.030)
 </td>
 <td>
-(0.032)
+(0.030)
 </td>
 </tr>
 <tr>
@@ -1398,7 +1398,7 @@ x
 (0.029)
 </td>
 <td>
-(0.031)
+(0.029)
 </td>
 </tr>
 <tr>
@@ -1508,6 +1508,11 @@ Residual Std. Error
 <li>Keep tex file</li>
 <li>Compile tex</li>
 <li>Install (update) whatever is necessary</li>
+</ol></li>
+<li>Update R &amp; rstudio
+<ol style="list-style-type: decimal">
+<li>Windows: installr::updateR()</li>
+<li>MacOS: <a href="https://cloud.r-project.org/bin/macosx/">https://cloud.r-project.org/bin/macosx/</a></li>
 </ol></li>
 </ul>
 <hr />
