My first website

--- a/index.html
+++ b/index.html
@@ -308,15 +308,16 @@ $(document).ready(function () {
 
 <hr />
 <blockquote>
-<div class="line-block">PhD Candidate<br />
+<div class="line-block">Assistant Professor in Risk Management and Insurance<br />
 <br />
-Department of Insurance Legal Studies, and Real Estate<br />
-B417 Amos Hall<br />
-Terry College of Business<br />
-University of Georgia<br />
-Athens, GA, 30602<br />
+School of Risk Management and Insurance<br />
+Muma College of Business, Sarasota-Manatee<br />
+University of South Florida<br />
+8350 N. Tamiami Trail C-232<br />
+Sarasota, FL 34243<br />
 <br />
-Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
+Email: <a href="mailto:polinwang@usf.edu">polinwang@usf.edu</a><br />
+Office Phone: 941-359-2470</div>
 </blockquote>
 <p><br />
 <br />
@@ -327,7 +328,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 </div>
 <div id="research-interests" class="section level4">
 <h4>Research Interests</h4>
-<p>Mortality modeling, asset liability management, generational wealth accounts, and market discipine</p>
+<p>Mortality modeling, asset liability management, inter-generational risk transfer, and insurance market discipline</p>
 </div>
 <div id="society-of-actuary-soa-exams-completed" class="section level4">
 <h4>Society of Actuary (SOA) Exams Completed:</h4>
@@ -357,7 +358,7 @@ Email: <a href="mailto:polinwang@uga.edu">polinwang@uga.edu</a></div>
 <li>R (recently developed interests in)</li>
 </ul>
 <hr />
-<p>Last updated : March, 2020</p>
+<p>Last updated : September, 2020</p>
 </div>
 
 
