--- a/teaching.html
+++ b/teaching.html
@@ -318,6 +318,13 @@ $(document).ready(function () {
 <p>(Spring 2019 – <a href="https://drive.google.com/file/d/1J2mYaTuITbFIBi3Zjeq5KfuJ5GHRBVCp/view?usp=sharing">Syllabus</a>, Spring 2020 – Syllabus)</p></li>
 </ul>
 </div>
+<div id="university-of-south-florida" class="section level3">
+<h3>University of South Florida</h3>
+<ul>
+<li><p>Life and Health Insurance Products RMI 4115</p>
+<p>(Fall 2020)</p></li>
+</ul>
+</div>
 
 
 
